--- a/gosort_config.json
+++ b/gosort_config.json
@@ -1,1 +1,1 @@
-{"ip_address": "192.168.100.78", "sorter_id": "sorter1"}
+{"ip_address": "192.168.100.78", "sorter_id": "sorter1", "device_mode": "cpu"}
