--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,16 @@ GoSort.ino
 GoSort.py
 gosort_config.json
 *.json
+best885.pt
+GoSort.ino
+GoSort.py
+GoSort_Detect.py
+GoSort_Detect_Simulation.py
+GoSort_Simulation.py
+installer.bat
+maintenance_command.txt
+python_maintenance_mode.txt
+run_dev.bat
+settings_tabs/historytab.php
+test_mapping.py
+run.bat
