--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,27 @@
-GoSort.ino
-GoSort.py
-gosort_config.json
-*.json
-best885.pt
+
+# Ignore dev/test scripts and sensitive files
 GoSort.ino
 GoSort.py
 GoSort_Detect.py
 GoSort_Detect_Simulation.py
 GoSort_Simulation.py
+test_mapping.py
 installer.bat
+run_dev.bat
+run.bat
 maintenance_command.txt
 python_maintenance_mode.txt
-run_dev.bat
-test_mapping.py
-run.bat
+best885.pt
+
+# Ignore config and secrets (uncomment if you use Railway ENV vars)
+# gosort_config.json
+# *.json
+
+# Ignore OS/editor files
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+node_modules/
+__pycache__/
+
