--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,8 @@
 [phases.setup]
-nixPkgs = ["php81", "php81Extensions.mysqli", "php81Extensions.pdo_mysql"]
+nixPkgs = ["php81Extensions.mysqli", "php81Extensions.pdo_mysql"]
+
+[phases.install]
+cmds = ["mkdir -p /tmp"]
 
 [start]
 cmd = "php -S 0.0.0.0:${PORT:-8080} -t . router.php"
