--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,24 @@
 [phases.setup]
-nixPkgs = ["php81Extensions.mysqli", "php81Extensions.pdo_mysql"]
+nixPkgs = ["php81Extensions.mysqli", "php81Extensions.pdo_mysql", "php81Extensions.opcache", "php81Extensions.zlib"]
 
 [phases.install]
-cmds = ["mkdir -p /tmp"]
+cmds = [
+    "mkdir -p /tmp",
+    """echo '[opcache]
+opcache.enable=1
+opcache.memory_consumption=128
+opcache.interned_strings_buffer=8
+opcache.max_accelerated_files=4000
+opcache.revalidate_freq=60
+opcache.fast_shutdown=1
+opcache.enable_cli=0
+[zlib]
+zlib.output_compression=On
+zlib.output_compression_level=6
+[session]
+session.save_path=/tmp
+' > /tmp/php-optimize.ini"""
+]
 
 [start]
-cmd = "php -S 0.0.0.0:${PORT:-8080} -t . router.php"
+cmd = "php -c /tmp/php-optimize.ini -S 0.0.0.0:${PORT:-8080} -t . router.php"
