--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,17 +6,23 @@ cmds = [
     "mkdir -p /tmp",
     """echo '[opcache]
 opcache.enable=1
-opcache.memory_consumption=128
-opcache.interned_strings_buffer=8
-opcache.max_accelerated_files=4000
-opcache.revalidate_freq=60
+opcache.memory_consumption=256
+opcache.interned_strings_buffer=16
+opcache.max_accelerated_files=10000
+opcache.revalidate_freq=0
+opcache.validate_timestamps=0
 opcache.fast_shutdown=1
 opcache.enable_cli=0
+opcache.preload=/app/preload.php
+opcache.preload_user=root
 [zlib]
 zlib.output_compression=On
 zlib.output_compression_level=6
 [session]
 session.save_path=/tmp
+[realpath_cache]
+realpath_cache_size=4096k
+realpath_cache_ttl=600
 ' > /tmp/php-optimize.ini"""
 ]
 
