--- a/gosort_config.json
+++ b/gosort_config.json
@@ -1,1 +1,1 @@
-{"ip_address": "gosortweb-production.up.railway.app", "sorter_id": "tae"}
+{"ip_address": "gosortweb-production.up.railway.app", "sorter_id": "tae", "device_mode": "gpu"}
